[package]
name = "rust-coding-test"
version = "0.1.0"
authors = ["Maximilian Köstler <maximilian@koestler.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
csv = "1"
rust_decimal = { version = "1.12", features = ["serde-str"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rust_decimal_macros = "1.12"
